--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,19 @@
-<p>grafica1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <app-dona titulo="Ventas" [labels]="labels1" [data]="data1"></app-dona>
+    </div>
+
+    <div class="col-6">
+        <app-dona titulo="Ventas 2" [labels]="labels2" [data]="data2"></app-dona>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <app-dona titulo="Ventas 3" [labels]="labels3" [data]="data3"></app-dona>
+    </div>
+
+    <div class="col-6">
+        <app-dona titulo="Ventas 4" [labels]="labels4" [data]="data4"></app-dona>
+    </div>
+</div>
