Fin seccion 14 - Login/Auth FrontEnd

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,14 @@
     animation-fill-mode: both
 }
 
-#themecolors .selector {
+#themecolors .selector,
+.cursor {
     cursor: pointer;
+}
+
+#google-btn {
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
