--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,30 @@
     padding: 10px;
     align-content: center;
 }
+
+.w100 {
+    width: 100px;
+}
+
+.w410 {
+    width: 140px;
+}
+
+.avatar {
+    border-radius: 100%;
+    width: 30px;
+}
+
+.oculto {
+    display: none;
+}
+
+.fondo-modal-imagen {
+    background-color: rgba(0, 0, 0, 0.4);
+    height: 100%;
+    left: 0px;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 9999;
+}
